--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+    implementation 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.mybatis:mybatis:3.5.6'
+    implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
 }
 
 test {
