--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.9.0'
     implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.9'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 }
 
 test {
